<resources>
    <string name="app_name">student617070</string>
    <string name="title_of_the_article">Title of the article</string>
    <string name="ask_for_log_in">Welcome, please login or register to save your favorites articles</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">\"Welcome, \"</string>
    <string name="logoutResult">You have been logged out</string>
    <string name="userNameInUse">This user name is already in use, please try again</string>
    <string name="registerSuccess">You have been successfully registered</string>
    <string name="waiting">Loading…</string>
    <string name="loggedIn">You are logged in</string>
    <string name="try_again">Try again!</string>
    <string name="full_article">Link to the full article</string>
    <string name="articleimage">ArticleImage</string>
    <string name="like">like</string>
    <string name="tryAgainLater">Please, try again later!</string>
    <string name="userNameRequired">User Name is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="image">Image</string>
    <string name="favorites">Favorites</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="wrong">Something went wrong, please, try again</string>
    <string name="network">A network error has been occurred. Please, try again.</string>
    <string name="news_reader">News reader app</string>
    <string name="designed_by_nadia_klimenko">Designed by Nadia Klimenko</string>
    <string name="logo">logo</string>

</resources>