<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_24px"
        android:onClick="onGroupItemClick"
        android:title="@string/home"
        app:showAsAction="always"
        android:layout_margin="15dp">

    </item>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/liked"
        android:onClick="onGroupItemClick"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        android:layout_margin="15dp">

    </item>
    <item
        android:id="@+id/menu_bar"
        android:icon="@drawable/person_24px"
        android:onClick="onGroupItemClick"
        android:title="@string/log_in"
        app:showAsAction="always"
        android:layout_margin="15dp">

    </item>

</menu>