<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:id="@+id/register"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_user_name"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:textColorHint="@color/colorAccent"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/colorAccent"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:text="@string/register">
        </Button>


    </LinearLayout>
</RelativeLayout>