<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:id="@+id/logInOptions"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView

            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:text="@string/ask_for_log_in"
            android:textAppearance="@style/Text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="30dp">
        </TextView>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            >
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                >
            </Button>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/register">

            </Button>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>